Use getState without snapshot whenever possible. This may need to be reverted in some spots depending on how it works out. Some spots may be reliant on snapshots.